add weekly model

--- a/views/project.hbs
+++ b/views/project.hbs
@@ -4,7 +4,7 @@
     <div class="list-group">
   <a href="#" class="list-group-item active">
     <h4 class="list-group-item-heading">{{name}}</h4>
-    <p class="list-group-item-text">{{status}}</p>
+    <p class="list-group-item-text">{{description}}</p>
   </a>
 </div>
     {{/each}}
