--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-inverse">
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">首页 <span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="/">首页 <span class="sr-only">(current)</span></a></li>
           <li><a href="/project">Project</a></li>
           <li><a href="/weekly">Weekly</a></li>
           <li><a href="/device">Device</a></li>
@@ -25,7 +25,7 @@
     {{{body}}}
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <ol class="breadcrumb">
-  <li><a href="#">Home</a></li>
+  <li><a href="/">Home</a></li>
   <li><a href="#">Library</a></li>
   <li class="active">Data</li>
 </ol>
