add detail of projects

--- a/views/addWeekly.hbs
+++ b/views/addWeekly.hbs
@@ -1,4 +1,4 @@
-<h1 class="text-nowrap text-right">Welcome,{{username}}!</h1>
+{{!--<h1 class="text-nowrap text-right">Welcome,{{username}}!</h1>--}}
 <div class="form-group">
     <form action="/weekly" method="post">
         <div class="form-group">
