--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,6 +15,7 @@
           <li><a href="/project">Project</a></li>
           <li><a href="/weekly">Weekly</a></li>
           <li><a href="/device">Device</a></li>
+          <li><a href="/users">我的主页</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/login">Login</a></li>
@@ -22,6 +23,7 @@
       </div>
       <!-- /.navbar-collapse -->
     </nav>
+    <h1 class="text-nowrap text-right">Welcome,{{username}}!</h1>
     {{{body}}}
   </div>
 </body>
