--- a/views/project.hbs
+++ b/views/project.hbs
@@ -1,6 +1,6 @@
 <div>
   <div class="page-header">
-  <h1>项目列表 <small>最近更新：</small></h1>
+  <h1>项目列表 <small><a href="/addProject">新增项目</a></small></h1>
 </div>
   <table class="table table-condensed table-striped">
     <tr>
