--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,4 +1,4 @@
-<h1 class="text-nowrap text-right">Welcome,{{username}}!</h1>
+{{!--<h1 class="text-nowrap text-right">Welcome,{{username}}!</h1>--}}
 <div class="page-header">
     <h1>个人主页 <small>查看待办事项</small></h1>
 </div>
