--- a/views/addProject.hbs
+++ b/views/addProject.hbs
@@ -20,8 +20,8 @@
 </select>
     </div>
     <div class="form-group">
-        <label for="client">研发组：</label>
-        <select class="form-control" name="area">
+        <label for="leader">研发组：</label>
+        <select class="form-control" name="leader">
   <option value="温震宇">温震宇</option>
   <option value="钟联波">钟联波</option>
   <option value="蔡及第">蔡及第</option>
@@ -32,7 +32,7 @@
         <div class="col-sm-4">
             <div class="form-group">
                 <label for="maintainer">研发：</label>
-                <input type="text" class="form-control" id="client" placeholder="RD" name="maintaine">
+                <input type="text" class="form-control" id="client" placeholder="RD" name="maintainer">
             </div>
         </div>
         <div class="col-sm-4">
