--- a/views/weekly.hbs
+++ b/views/weekly.hbs
@@ -1,6 +1,6 @@
 
 <div class="page-header">
-    <h1>我的周报 <small>查看待办事项</small></h1>
+    <h1>我的周报 <small><a href="/addWeekly">添加周报</a></small></h1>
 </div>
 <div>
     {{#each weeklys}}
