--- a/views/addWeekly.hbs
+++ b/views/addWeekly.hbs
@@ -1,4 +1,5 @@
-{{!--<h1 class="text-nowrap text-right">Welcome,{{username}}!</h1>--}}
+{{!--
+<h1 class="text-nowrap text-right">Welcome,{{username}}!</h1>--}}
 <div class="form-group">
     <form action="/weekly" method="post">
         <div class="form-group">
@@ -22,7 +23,7 @@
             <label for="plan">What`s your plan next week</label>
             <textarea name="plan" class="form-control" rows="4"></textarea>
         </div>
-                <div class="form-group">
+        <div class="form-group">
             <label for="description">What`s your Opinion</label>
             <textarea name="description" class="form-control" rows="3"></textarea>
         </div>
