add index banner

--- a/views/addProject.hbs
+++ b/views/addProject.hbs
@@ -49,6 +49,10 @@
         </div>
     </div>
         <div class="form-group">
+            <label for="plan">下阶段要完成的任务</label>
+            <textarea name="plan" class="form-control" rows="4"></textarea>
+        </div>
+        <div class="form-group">
             <label for="description">问题描述及背景概括</label>
             <textarea name="description" class="form-control" rows="4"></textarea>
         </div>
