--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,40 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="../images/after1.jpg" alt="..." style="margin:auto">
+      <div class="carousel-caption">
+        这是一条新闻
+      </div>
+    </div>
+    <div class="item">
+      <img src="../images/after2.jpg" alt="..." style="margin:auto">
+      <div class="carousel-caption">
+        这是一条通知
+      </div>
+    </div>
+    <div class="item">
+      <img src="../images/after3.jpg" alt="..." style="margin:auto">
+      <div class="carousel-caption">
+        这是一条预告
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
