--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,6 +26,9 @@
     <h1 class="text-nowrap text-right">Welcome,{{username}}!</h1>
     {{{body}}}
   </div>
+  <script src="../javascripts/jquery.min.js"></script>
+  <script src="../javascripts/bootstrap.min.js"></script>
+  
 </body>
 
 </html>
