--- a/views/projectDetail.hbs
+++ b/views/projectDetail.hbs
@@ -1,22 +1,143 @@
 <div class="page-header">
     <h1>{{project.name}} <small><a href="/project">查看所有项目</a></small></h1>
 </div>
-<div class="alert alert-success" role="alert"><p>区域： {{project.area}}</p></div>
-<div class="alert alert-info" role="alert"><p>研发负责人： {{project.leader}} 组的 {{project.maintainer}}</p></div>
-<div class="alert alert-warning" role="alert"><p>产品经理： {{project.product}}</p></div>
-<div class="alert alert-danger" role="alert"><p>业务前线： {{project.frontling}}</p></div>
+<div class="row">
+    <div class="col-md-6">
+    <div class="alert alert-success" role="alert">
+        <p>区域： {{project.area}}</p>
+    </div>
+    <div class="alert alert-info" role="alert">
+        <p>研发负责人： {{project.leader}} 组的 {{project.maintainer}}</p>
+    </div>
+    <div class="alert alert-warning" role="alert">
+        <p>产品经理： {{project.product}}</p>
+    </div>
+    <div class="alert alert-danger" role="alert">
+        <p>业务前线： {{project.frontling}}</p>
+    </div>
+    </div>
+    <div class="col-md-6">
+         <div id="main" style="width: 80%;height:400px;"></div>
+    </div>
+</div>
 <form>
+    <div class="row">
+        <div class="col-sm-5">
     <div class="form-group">
         <label for="status">状态</label>
         <select class="form-control" name="status" value="{{project.status}}">
-  <option value="正常">正常</option>
-  <option value="异常">异常</option>
-  <option value="预警">预警</option>
-</select>
+            <option value="正常">正常</option>
+            <option value="异常">异常</option>
+            <option value="预警">预警</option>
+        </select>
     </div>
-        <div class="form-group">
-            <label for="description">备注：</label>
-            <textarea name="description" class="form-control" rows="3" placeholder="{{project.description}}"></textarea>
+    </div>
+    <div class="col-sm-5 col-sm-offset-1">
+    <div class="form-group">
+        <label for="status">项目阶段</label>
+        <select class="form-control" name="period" value="{{project.period}}">
+            <option value="标案评估">标案评估</option>
+            <option value="软件定制">软件定制</option>
+            <option value="客户验证">客户验证</option>
+            <option value="正式提测">正式提测</option>
+            <option value="软件发布">软件发布</option>
+            <option value="软件维护">软件维护</option>
+            <option value="项目中止">项目中止</option>
+        </select>
+    </div>
+    </div>
+    </div>
+    <div class="form-group">
+        <div class="list-group">
+            <label>已经完成的计划：</label>
+            {{#each project.finished}}
+            <a href="#" class="list-group-item active">
+                <h4 class="list-group-item-heading">{{time}}</h4>
+                <p class="list-group-item-text">{{text}}</p>
+            </a>
+            {{/each}}
         </div>
+    </div>
+    <div class="form-group">
+        <label for="description">下一阶段计划：</label>
+        <textarea name="description" class="form-control" rows="3" placeholder="{{project.plan}}"></textarea>
+    </div>
+    <div class="form-group">
+        <label for="description">备注：</label>
+        <textarea name="description" class="form-control" rows="3" placeholder="{{project.description}}"></textarea>
+    </div>
     <button type="submit" class="btn btn-default">Submit</button>
 </form>
+<script src="../javascripts/echarts.min.js"></script>
+<script type="text/javascript">
+        // 基于准备好的dom，初始化echarts实例
+        var myChart = echarts.init(document.getElementById('main'));
+
+        // 指定图表的配置项和数据
+        var option = {
+    tooltip : {
+        trigger: 'item',
+        formatter: "{a} <br/>{b} : {c} ({d}%)"
+    },
+    legend: {
+        orient : 'vertical',
+        x : 'left',
+        data:['已经完成','计划完成',]
+    },
+    toolbox: {
+        show : true,
+        feature : {
+            mark : {show: true},
+            dataView : {show: true, readOnly: false},
+            magicType : {
+                show: true, 
+                type: ['pie', 'funnel'],
+                option: {
+                    funnel: {
+                        x: '25%',
+                        width: '50%',
+                        funnelAlign: 'center',
+                        max: 1548
+                    }
+                }
+            },
+            restore : {show: true},
+            saveAsImage : {show: true}
+        }
+    },
+    calculable : true,
+    series : [
+        {
+            name:'访问来源',
+            type:'pie',
+            radius : ['50%', '70%'],
+            itemStyle : {
+                normal : {
+                    label : {
+                        show : false
+                    },
+                    labelLine : {
+                        show : false
+                    }
+                },
+                emphasis : {
+                    label : {
+                        show : true,
+                        position : 'center',
+                        textStyle : {
+                            fontSize : '30',
+                            fontWeight : 'bold'
+                        }
+                    }
+                }
+            },
+            data:[
+                {value:335, name:'已经完成'},
+                {value:310, name:'计划完成'}
+            ]
+        }
+    ]
+};
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
+    </script>
