--- a/views/projectDetail.hbs
+++ b/views/projectDetail.hbs
@@ -69,7 +69,7 @@
         <label for="description">备注：</label>
         <textarea name="description" class="form-control" rows="3" placeholder="{{project.description}}"></textarea>
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-default">更新</button>
 </form>
 <script src="../javascripts/echarts.min.js"></script>
 <script type="text/javascript">
