@rocket add weeklyDetail

--- a/views/weekly.hbs
+++ b/views/weekly.hbs
@@ -9,7 +9,7 @@
   <div class="panel-heading">{{name}}</div>
   <div class="panel-body">
       <div class="list-group">
-  <a href="/projectDetail?id={{_id}}" class="list-group-item active">
+  <a href="/weeklyDetail?id={{_id}}" class="list-group-item active">
     <h4 class="list-group-item-heading">主要工作：{{done}}</h4>
     <p class="list-group-item-text">下周计划：{{plan}}</p>
   </a>
