--- a/views/projectDetail.hbs
+++ b/views/projectDetail.hbs
@@ -1,5 +1,7 @@
 <div class="page-header">
-    <h1>{{project.name}} <small><a href="/project">查看所有项目</a></small></h1>
+    <h1>{{project.name}} <small><a href="/project" type="button" class="btn btn-primary btn-lg">查看所有项目</a><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  更新项目
+</button></small></h1>
 </div>
 <div class="row">
     <div class="col-md-6">
@@ -20,7 +22,16 @@
          <div id="main" style="width: 80%;height:400px;"></div>
     </div>
 </div>
-<form action="/modProject" method="post">
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <form action="/modProject" method="post">
     <div>
         <input type="hidden" value={{project.id}} name="id" />
     </div>
@@ -50,27 +61,42 @@
     </div>
     </div>
     </div>
-    <div class="form-group">
-        <div class="list-group">
-            <label>已经完成的计划：</label>
-            {{#each project.finished}}
-            <a href="#" class="list-group-item active">
-                <h4 class="list-group-item-heading">{{time}}</h4>
-                <p class="list-group-item-text">{{text}}</p>
-            </a>
-            {{/each}}
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="plan">下一阶段计划：</label>
-        <textarea name="plan" class="form-control" rows="3" placeholder="{{project.plan.text}}"></textarea>
-    </div>
-    <div class="form-group">
-        <label for="description">备注：</label>
-        <textarea name="description" class="form-control" rows="3" placeholder="{{project.description}}"></textarea>
-    </div>
+
+<div class="form-group">
+    <label for="plan">当前计划：</label>
+
+    <textarea name="plan" class="form-control" rows="3" placeholder="{{project.plan.text}}"></textarea>
+</div>
+<div class="form-group">
+    <label for="description">备注：</label>
+    <textarea name="description" class="form-control" rows="3" placeholder="{{project.description}}"></textarea>
+</div>
     <button type="submit" class="btn btn-default">更新</button>
 </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+    <div class="list-group">
+        <label>已经完成的计划：</label> {{#each project.finished}}
+        <a href="#" class="list-group-item active">
+            <h4 class="list-group-item-heading">{{time}}</h4>
+            <p class="list-group-item-text">{{text}}</p>
+        </a>
+        {{/each}}
+    </div>
+</div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            {{project.plan.text}}
+        </div>
+    </div>
 <script src="../javascripts/echarts.min.js"></script>
 <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
