--- a/views/user.hbs
+++ b/views/user.hbs
@@ -3,7 +3,7 @@
     <h1>个人主页 <small>查看待办事项</small></h1>
 </div>
 <div class="row">
-    <a>
+    <a href="/users/project">
         <div class="col-xs-6 col-md-3">
             <div class="panel panel-default">
                 <div class="panel-heading" style="font-family:sans-serif;font-weight:800">My projects</div>
