--- a/views/user.hbs
+++ b/views/user.hbs
@@ -43,4 +43,44 @@
             </div>
         </div>
     </a>
+    <a href="/#">
+        <div class="col-xs-6 col-md-3">
+            <div class="panel panel-info">
+                <div class="panel-heading" style="font-family:sans-serif;font-weight:800">Finding device</div>
+                <div class="panel-body">
+                    <p style="font-size:40px;text-align:center">查询样机</p>
+                </div>
+            </div>
+        </div>
+    </a>
+    <a href="/#">
+        <div class="col-xs-6 col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading" style="font-family:sans-serif;font-weight:800">Document share</div>
+                <div class="panel-body">
+                    <p style="font-size:40px;text-align:center">资料共享</p>
+                </div>
+            </div>
+        </div>
+    </a>
+    <a href="/#">
+        <div class="col-xs-6 col-md-3">
+            <div class="panel panel-success">
+                <div class="panel-heading" style="font-family:sans-serif;font-weight:800">English learning</div>
+                <div class="panel-body">
+                    <p style="font-size:40px;text-align:center">技术讨论</p>
+                </div>
+            </div>
+        </div>
+    </a>
+    <a href="/#">
+        <div class="col-xs-6 col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-heading" style="font-family:sans-serif;font-weight:800">Fuck it</div>
+                <div class="panel-body">
+                    <p style="font-size:40px;text-align:center">吐槽</p>
+                </div>
+            </div>
+        </div>
+    </a>
 </div>
