--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,7 +28,7 @@
   </div>
   <script src="../javascripts/jquery.min.js"></script>
   <script src="../javascripts/bootstrap.min.js"></script>
-  
+  <script src="../javascripts/moment.min.js"></script>
 </body>
 
 </html>
