--- a/views/weekly.hbs
+++ b/views/weekly.hbs
@@ -4,7 +4,7 @@
 </div>
 <div class="row">
     {{#each weeklys}}
-  <div class="col-sm-6 col-md-4">
+  <div class="col-sm-4 col-md-4 col-xs-4">
     <div class="thumbnail">
       <div class="caption">
         <h3>用户： {{name}} 周次：{{week}} 更新时间： {{updated}}</h3>
