--- a/views/user.hbs
+++ b/views/user.hbs
@@ -23,7 +23,7 @@
             </div>
         </div>
     </a>
-    <a>
+    <a href="/users/device">
         <div class="col-xs-6 col-md-3">
             <div class="panel panel-primary">
                 <div class="panel-heading" style="font-family:sans-serif;font-weight:800">My devices</div>
@@ -43,7 +43,7 @@
             </div>
         </div>
     </a>
-    <a href="/#">
+    <a href="/device">
         <div class="col-xs-6 col-md-3">
             <div class="panel panel-info">
                 <div class="panel-heading" style="font-family:sans-serif;font-weight:800">Finding device</div>
