--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{{title}}</title>
+  <title>运营商事业部任务管理系统--{{title}}</title>
   <link rel='stylesheet' href='../stylesheets/style.css' type="text/css" />
 </head>
 
