--- a/views/user.hbs
+++ b/views/user.hbs
@@ -53,7 +53,7 @@
             </div>
         </div>
     </a>
-    <a href="/#">
+    <a href="/share">
         <div class="col-xs-6 col-md-3">
             <div class="panel panel-primary">
                 <div class="panel-heading" style="font-family:sans-serif;font-weight:800">Document share</div>
